--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,18 @@
+Thu Oct  3 11:24:09 1996  Martin Junius  <mj@fido.de>
+
+	======= Release 4.0 beta 1 ===========================================
+	------- CVS tag R40b1 ------------------------------------------------
+
+	------- CVS ci -------------------------------------------------------
+
+	* examples/morannon/: updated all config files with new versions
+	  from morannon.fido.de.
+
 Wed Oct  2 17:10:19 1996  Martin Junius  <mj@fido.de>
+
+	* doc/fidogate.texi (Compiling): added "make depend".
+
+	* README: added reference to doc/fidogate.txt.
 
 	------- CVS ci -------------------------------------------------------
 
