--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 -*- Indented-Text -*-
 
-$Id: README,v 4.9 1996/09/16 20:13:18 mj Exp $
+$Id: README,v 4.10 1996/10/03 09:48:34 mj Exp $
 
 ----------------------------------------------------------------------
 				   
@@ -63,6 +63,12 @@ Installing:
 3.  Create the various config files and put them into LIBDIR
     (see examples/... to get started)
 
+See also doc/fidogate.txt (PostScript documentation can be compiled by
+running "make doc" in the doc/ subdirectory) for a detailed
+description of the FIDOGATE installation.
+
+PLEASE NOTE THAT THIS DOCUMENTATION IS NOT COMPLETELY UP-TO-DATE!!!
+
 ----------------------------------------------------------------------
 
 There is a mailing list for FIDOGATE discussions and announcements:
@@ -103,4 +109,4 @@ For an OS/2 version of FIDOGATE contact:
 
 ----------------------------------------------------------------------
 
-Martin Junius <mj@fido.de>, $Date: 1996/09/16 20:13:18 $
+Martin Junius <mj@fido.de>, $Date: 1996/10/03 09:48:34 $
