--- a/doc/fidogate.texi
+++ b/doc/fidogate.texi
@@ -2,7 +2,7 @@
 @c
 @c FIDOGATE documentation
 @c
-@c $Id: fidogate.texi,v 4.3 1996/10/02 19:09:41 mj Exp $
+@c $Id: fidogate.texi,v 4.4 1996/10/03 09:48:34 mj Exp $
 @c
 
 @setfilename fidogate.info
@@ -47,7 +47,7 @@ into other languages, under the above conditions for modified versions.
 @subtitle FIDO - Internet Gateway
 @subtitle FIDO mail processor
 @subtitle Version 4.0 beta
-@author by M. Junius
+@author by Martin Junius
 
 @page
 
@@ -839,6 +839,7 @@ FIDO messages to a single mail/posting.
 
 Then compile the beast by entering
 @example
+make depend
 make
 @end example
 
