--- a/TODO
+++ b/TODO
@@ -2,6 +2,8 @@
 
 X = for next release
 
+	* config.ffx: replace LIBDIR/ffxqt-dir/ with Command list.
+
 	* config.c: make Origin/Organization normal cf_get_string()
 	  parameters.
 
